[project]
name = "pi-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "August Femtehjell" }
]
requires-python = ">=3.12"
dependencies = [
    "geodatasets>=2024.8.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "numpy>=2.3.4",
    "shapely>=2.1.2",
    "xarray>=2025.10.1",
]

[project.scripts]
pi-maker = "pi_maker:cache_pi_to_file"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cfchecker>=4.1.0",
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    "ruff>=0.14.1",
    "tqdm>=4.67.1",
]
